--- a/app/index.html
+++ b/app/index.html
@@ -20,6 +20,10 @@
   <!-- Place favicon.ico in the root directory -->
 
   <!-- build:css styles/vendor.css -->
+  <link
+    href="node_modules/prismjs/themes/prism.css"
+    rel="stylesheet"
+  />
   <!-- endbuild -->
 
   <!-- build:css styles/main.css -->
@@ -32,25 +36,24 @@
 </head>
 
 <body>
-  <!--[if IE]>
-      <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-    <![endif]-->
-
-  <div class="hero-unit">
-    <h1>'Allo, 'Allo!</h1>
-    <p>You now have</p>
-    <ul>
-      <li>HTML5 Boilerplate</li>
-      <li>Sass</li>
-      <li>jQuery</li>
-    </ul>
-  </div>
+  <section class="section">
+    <div class="container">
+      <h1 class="title">Soft UI</h1>
+      <p class="subtitle">based on bulma.io</p>
+      <ul>
+        <li><a href="layout.html">Layout</a></li>
+        <li>Form</li>
+        <li>Component</li>
+      </ul>
+    </div>
+  </section>
 
   <!-- build:js scripts/vendor.js -->
   <script
     type="text/javascript"
-    src="/node_modules/jquery/dist/jquery.min.js"
+    src="node_modules/jquery/dist/jquery.min.js"
   ></script>
+  <script src="node_modules/prismjs/prism.js"></script>
   <!-- endbuild -->
 
   <!-- build:js scripts/main.js -->
