brick and block concept

--- a/app/index.html
+++ b/app/index.html
@@ -50,6 +50,7 @@
           </p>
           <ul class="menu-list">
             <li><a onclick="view('general/variables.html')">Variables</a></li>
+            <li><a onclick="view('general/brick-and-block.html')">Brick & Block</a></li>
             <li><a onclick="view('general/helper.html')">Helper</a></li>
           </ul>
           <p class="menu-label">
