--- a/web/src/index.html
+++ b/web/src/index.html
@@ -6,7 +6,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Web</title>
+  <title>Trunks UI</title>
   <base href="/">
   <meta
     name="viewport"
